fixed bug about header will scroll out of the outer-wraper when last row scroll in the viewable area

--- a/src/component/vue-bigdata-table/vue-bigdata-table.less
+++ b/src/component/vue-bigdata-table/vue-bigdata-table.less
@@ -6,13 +6,11 @@
         height: 100%;
         overflow: auto;
         border: 1px solid #e9eaec;
-        border-top: none;
         box-sizing: border-box;
     }
     width: 100%;
     height: 100%;
-    border-top: 1px solid #e9eaec;
-    // border-bottom: 1px solid #e9eaec;
+    padding-top: 1px;
     position: relative;
     &-wraper{
         width: 100%;
